# tauri-plugin-fs-pro

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.tsx
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: compress.toml  decompress.toml  extname.toml  full_name.toml  get_default_save_icon_path.toml  icon.toml  is_dir.toml  is_exist.toml  is_file.toml  parent_name.toml  transfer.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs
