[package]
name = "tauri-plugin-fs-pro"
version = "2.2.0"
authors = [ "ayangweb" ]
description = "Extended with additional methods for files and directories."
repository = "https://github.com/ayangweb/tauri-plugin-fs-pro"
keywords = ["fs-extra", "fs-pro", "tauri", "tauri-plugin"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-fs-pro"

[dependencies]
tauri = { version = "2.1.0" }
serde = "1.0"
thiserror = "2"
fs_extra = "1.3.0"
showfile = "0.1.1"
open = "5.3.1"
flate2 = "1.0.34"
tar = "0.4.42"
file_icon_provider = "0.3.1"
image = "0.25.5"

[build-dependencies]
tauri-plugin = { version = "2.0.2", features = ["build"] }
