[package]
name = "tauri-plugin-fs-pro"
version = "2.4.0"
authors = [ "ayangweb" ]
description = "Extended with additional methods for files and directories."
repository = "https://github.com/ayangweb/tauri-plugin-fs-pro"
keywords = ["fs-extra", "fs-pro", "tauri", "tauri-plugin"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-fs-pro"

[dependencies]
tauri = "2"
serde = "1"
thiserror = "2"
fs_extra = "1"
flate2 = "1"
tar = "0.4"
file_icon_provider = "0.3"
image = "0.25"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
